--- a/app/repository.bower/angularjs-slider/package.json
+++ b/app/repository.bower/angularjs-slider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angularjs-slider",
-  "version": "5.4.3",
+  "version": "5.8.7",
   "description": "AngularJS slider directive with no external dependencies. Mobile friendly!.",
   "main": "dist/rzslider.js",
   "repository": {
@@ -23,13 +23,14 @@
   "devDependencies": {
     "angular": "1.4.7",
     "angular-mocks": "1.4.8",
-    "chai": "^3.4.1",
+    "chai": "^3.5.0",
     "codecov.io": "^0.1.6",
     "commitizen": "^2.4.6",
     "cz-conventional-changelog": "^1.1.5",
     "grunt": "~0.4.2",
     "grunt-angular-templates": "^0.5.7",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-mincss": "~0.3.2",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "^0.6.1",
@@ -38,15 +39,16 @@
     "grunt-recess": "~0.4.0",
     "grunt-replace": "^0.11.0",
     "grunt-serve": "^0.1.6",
-    "karma": "^0.13.15",
+    "karma": "^1.3.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.2.2",
     "karma-coverage": "^0.5.3",
     "karma-mocha": "^0.2.1",
+    "karma-mocha-reporter": "^2.2.0",
     "karma-ng-html2js-preprocessor": "^0.2.0",
-    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-phantomjs-launcher": "^1.0.2",
     "karma-sinon": "^1.0.4",
-    "mocha": "^2.3.4",
+    "mocha": "^3.1.2",
     "phantomjs": "^1.9.19",
     "recess": "~1.1.9",
     "sinon": "^1.17.2"
